--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A viewer to display codeclub lessons",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server",
+    "build": "webpack",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -21,10 +24,28 @@
     "url": "https://github.com/NorwegianKiwi/codeclub-viewer/issues"
   },
   "homepage": "https://github.com/NorwegianKiwi/codeclub-viewer#readme",
+  "babel": {
+    "presets": [
+      "es2015",
+      "react",
+      "stage-2"
+    ]
+  },
   "dependencies": {
-    "markdown-it": "6.0.1"
+    "markdown-it": "6.0.1",
+    "react": "15.0.2",
+    "react-dom": "15.0.2"
   },
   "devDependencies": {
+    "babel-core": "6.8.0",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-stage-2": "6.5.0",
+    "chai": "3.5.0",
+    "jsdom": "9.0.0",
+    "mocha": "2.4.5",
+    "react-hot-loader": "1.3.0",
     "webpack": "1.13.0",
     "webpack-dev-server": "1.14.0"
   }
