--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server",
     "build": "webpack",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "eslint": "eslint src/ test/ --ext .js,.jsx"
   },
   "repository": {
     "type": "git",
@@ -38,11 +39,14 @@
   },
   "devDependencies": {
     "babel-core": "6.8.0",
+    "babel-eslint": "6.0.4",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-2": "6.5.0",
     "chai": "3.5.0",
+    "eslint": "2.9.0",
+    "eslint-plugin-react": "5.1.1",
     "jsdom": "9.0.0",
     "mocha": "2.4.5",
     "react-hot-loader": "1.3.0",
