--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     ]
   },
   "dependencies": {
-    "markdown-it": "6.0.1",
     "react": "15.0.2",
     "react-dom": "15.0.2"
   },
@@ -45,10 +44,20 @@
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-2": "6.5.0",
     "chai": "3.5.0",
+    "combine-loader": "0.1.0",
     "eslint": "2.9.0",
     "eslint-plugin-react": "5.1.1",
+    "front-matter-loader": "0.1.2",
+    "html-loader": "0.4.3",
     "jsdom": "9.0.0",
+    "json-loader": "0.5.4",
+    "markdown-it-anchor": "2.5.0",
+    "markdown-it-attrs": "0.2.1",
+    "markdown-it-header-sections": "0.2.2",
+    "markdown-it-implicit-figures": "0.2.3",
+    "markdown-it-loader": "0.2.0",
     "mocha": "2.4.5",
+    "raw-loader": "0.5.1",
     "react-hot-loader": "1.3.0",
     "webpack": "1.13.0",
     "webpack-dev-server": "1.14.0"
