--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "combine-loader": "0.1.0",
     "eslint": "2.9.0",
     "eslint-plugin-react": "5.1.1",
+    "file-loader": "0.8.5",
     "front-matter-loader": "0.1.2",
     "html-loader": "0.4.3",
     "jsdom": "9.0.0",
@@ -59,6 +60,7 @@
     "mocha": "2.4.5",
     "raw-loader": "0.5.1",
     "react-hot-loader": "1.3.0",
+    "url-loader": "0.5.7",
     "webpack": "1.13.0",
     "webpack-dev-server": "1.14.0"
   }
