Added html-webpack-plugin (to create index.html dynamically) and clean-webpack-plugin.

--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-2": "6.5.0",
     "chai": "3.5.0",
+    "clean-webpack-plugin": "0.1.9",
     "combine-loader": "0.1.0",
     "eslint": "2.9.0",
     "eslint-plugin-react": "5.1.1",
     "file-loader": "0.8.5",
     "front-matter-loader": "0.1.2",
     "html-loader": "0.4.3",
+    "html-webpack-plugin": "2.16.1",
     "jsdom": "9.0.0",
     "json-loader": "0.5.4",
     "markdown-it-anchor": "2.5.0",
