--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "dependencies": {
     "react": "15.0.2",
-    "react-dom": "15.0.2"
+    "react-dom": "15.0.2",
+    "react-router": "2.4.0"
   },
   "devDependencies": {
     "babel-core": "6.8.0",
