--- a/package.json
+++ b/package.json
@@ -35,19 +35,24 @@
   },
   "dependencies": {
     "react": "15.0.2",
+    "react-bootstrap": "0.29.4",
     "react-dom": "15.0.2",
     "react-router": "2.4.0"
   },
   "devDependencies": {
+    "autoprefixer": "6.3.6",
     "babel-core": "6.8.0",
     "babel-eslint": "6.0.4",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-2": "6.5.0",
+    "bootstrap-loader": "1.0.10",
+    "bootstrap-sass": "3.3.6",
     "chai": "3.5.0",
     "clean-webpack-plugin": "0.1.9",
     "combine-loader": "0.1.0",
+    "css-loader": "0.23.1",
     "eslint": "2.9.0",
     "eslint-plugin-react": "5.1.1",
     "file-loader": "0.8.5",
@@ -62,8 +67,13 @@
     "markdown-it-implicit-figures": "0.2.3",
     "markdown-it-loader": "0.2.0",
     "mocha": "2.4.5",
+    "node-sass": "3.7.0",
+    "postcss-loader": "0.9.1",
     "raw-loader": "0.5.1",
     "react-hot-loader": "1.3.0",
+    "resolve-url-loader": "1.4.3",
+    "sass-loader": "3.2.0",
+    "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.0",
     "webpack-dev-server": "1.14.0"
