--- a/.bootstraprc
+++ b/.bootstraprc
@@ -51,54 +51,54 @@ extractStyles: false
 styles:
 
   # Mixins
-  mixins: true
+  mixins: false
 
   # Reset and dependencies
   normalize: true
-  print: true
-  glyphicons: true
+  print: false
+  glyphicons: false
 
   # Core CSS
-  scaffolding: true
-  type: true
-  code: true
-  grid: true
-  tables: true
-  forms: true
-  buttons: true
+  scaffolding: false
+  type: false
+  code: false
+  grid: false
+  tables: false
+  forms: false
+  buttons: false
 
   # Components
-  component-animations: true
-  dropdowns: true
-  button-groups: true
-  input-groups: true
-  navs: true
-  navbar: true
-  breadcrumbs: true
-  pagination: true
-  pager: true
-  labels: true
-  badges: true
-  jumbotron: true
-  thumbnails: true
-  alerts: true
-  progress-bars: true
-  media: true
-  list-group: true
-  panels: true
-  wells: true
-  responsive-embed: true
-  close: true
+  component-animations: false
+  dropdowns: false
+  button-groups: false
+  input-groups: false
+  navs: false
+  navbar: false
+  breadcrumbs: false
+  pagination: false
+  pager: false
+  labels: false
+  badges: false
+  jumbotron: false
+  thumbnails: false
+  alerts: false
+  progress-bars: false
+  media: false
+  list-group: false
+  panels: false
+  wells: false
+  responsive-embed: false
+  close: false
 
   # Components w/ JavaScript
-  modals: true
-  tooltip: true
-  popovers: true
-  carousel: true
+  modals: false
+  tooltip: false
+  popovers: false
+  carousel: false
 
   # Utility classes
-  utilities: true
-  responsive-utilities: true
+  utilities: false
+  responsive-utilities: false
 
 ### Bootstrap scripts, set to false to avoid jQuery
 scripts:
