--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A viewer to display codeclub lessons",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress",
+    "start": "webpack-dev-server -d --progress --inline --hot",
     "build": "webpack -d --progress",
-    "buildprod": "webpack -p",
+    "build:prod": "cross-env NODE_ENV=production webpack -p",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
     "test:watch": "npm run test -- --watch",
     "eslint": "eslint src/ test/ --ext .js,.jsx"
@@ -52,10 +52,13 @@
     "chai": "3.5.0",
     "clean-webpack-plugin": "0.1.9",
     "combine-loader": "0.1.0",
+    "cross-env": "1.0.7",
     "css-loader": "0.23.1",
     "eslint": "2.9.0",
     "eslint-plugin-react": "5.1.1",
+    "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
+    "force-case-sensitivity-webpack-plugin": "0.1.1",
     "front-matter-loader": "0.1.2",
     "html-loader": "0.4.3",
     "html-webpack-plugin": "2.16.1",
