Add express server. Do "npm run serve" (after "npm run build" or "npm run build:prod")

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server -d --progress --inline --hot",
     "build": "webpack -d --progress",
     "build:prod": "cross-env NODE_ENV=production webpack -p",
+    "serve": "node server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
     "test:watch": "npm run test -- --watch",
     "eslint": "eslint src/ test/ --ext .js,.jsx"
@@ -52,10 +53,12 @@
     "chai": "3.5.0",
     "clean-webpack-plugin": "0.1.9",
     "combine-loader": "0.1.0",
+    "compression": "1.6.2",
     "cross-env": "1.0.7",
     "css-loader": "0.23.1",
     "eslint": "2.9.0",
     "eslint-plugin-react": "5.1.1",
+    "express": "4.13.4",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "force-case-sensitivity-webpack-plugin": "0.1.1",
