--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-hot-loader": "1.3.0",
     "resolve-url-loader": "1.4.3",
     "sass-loader": "3.2.0",
+    "static-site-generator-webpack-plugin": "2.0.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.0",
