Frontpage and Playlistpage now works with staticsitegenerator.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server -d --progress --inline --hot",
     "build": "webpack -d --progress",
-    "build:prod": "cross-env NODE_ENV=production webpack -p",
+    "build:prod": "cross-env NODE_ENV=production webpack -p --progress",
     "serve": "node server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
     "test:watch": "npm run test -- --watch",
