--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "A viewer to display codeclub lessons",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server -d --progress --inline --hot",
-    "build": "webpack -d --progress",
-    "build:prod": "cross-env NODE_ENV=production webpack -p --progress",
-    "build:static": "webpack --config=webpack.static.config.babel.js --progress",
-    "buildall": "npm run build && npm run build:static",
-    "buildall:prod": "npm run build:prod && npm run build:static",
+    "start": "webpack-dev-server -d --progress --inline --hot --history-api-fallback",
+    "buildjs": "webpack -d --progress",
+    "buildjs:prod": "cross-env NODE_ENV=production webpack -p --progress",
+    "buildstatic": "webpack --config=webpack.static.config.babel.js --progress",
+    "build": "npm run buildjs && npm run buildstatic",
+    "build:prod": "npm run buildjs:prod && npm run buildstatic",
     "serve": "http-server ./dist",
+    "servejs": "node ./server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
     "test:watch": "npm run test -- --watch",
     "eslint": "eslint src/ test/ --ext .js,.jsx",
