--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react": "15.1.0",
     "react-bootstrap": "0.29.4",
     "react-dom": "15.1.0",
-    "react-router": "2.4.1"
+    "react-router": "2.4.1",
+    "react-tap-event-plugin": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "6.3.6",
