--- a/.bootstraprc
+++ b/.bootstraprc
@@ -68,8 +68,8 @@ styles:
   buttons: false
 
   # Components
-  component-animations: false
-  dropdowns: false
+  component-animations: true
+  dropdowns: true
   button-groups: false
   input-groups: false
   navs: false
@@ -102,11 +102,11 @@ styles:
 
 ### Bootstrap scripts, set to false to avoid jQuery
 scripts:
-  transition: false
+  transition: true
   alert: false
   button: false
   carousel: false
-  collapse: false
+  collapse: true
   dropdown: false
   modal: false
   tooltip: false
