--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - "6.2.2"
+before_install:
+  - git clone https://github.com/kodeklubben/oppgaver.git ../oppgaver
 script:
+  - ./travis_build_prod.sh
   - npm run eslint
   - npm run test
