--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "buildstatic": "webpack --config=webpack.static.config.babel.js --progress",
     "build": "npm run buildjs && npm run buildstatic",
     "build:prod": "npm run buildjs:prod && npm run buildstatic",
+    "build:prod:travis": "cross-env NODE_ENV=production webpack -p && webpack --config=webpack.static.config.babel.js",
     "serve": "http-server ./dist",
     "servejs": "node ./server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
