--- a/.bootstraprc
+++ b/.bootstraprc
@@ -44,7 +44,7 @@ extractStyles: false
 # Import your custom styles here
 # Usually this endpoint-file contains list of @imports of your application styles
 #
-# appStyles: ./path/to/your/app/styles/endpoint.scss
+appStyles: ./src/assets/css/app.scss
 
 
 ### Bootstrap styles
