--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "15.1.0",
     "react-bootstrap": "0.29.4",
     "react-dom": "15.1.0",
+    "react-fontawesome": "1.1.0",
     "react-redux": "4.4.5",
     "react-router": "2.4.1",
     "redux": "3.5.2",
