Switch force-case-sensitivity-webpack-plugin with case-sensitive-paths-webpack-plugin, and use a forked version of it to deal with Norwegian letters.

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "bootstrap-loader": "1.0.10",
     "bootstrap-sass": "3.3.6",
     "bundle-loader": "0.5.4",
+    "case-sensitive-paths-webpack-plugin": "git@github.com:NorwegianKiwi/case-sensitive-paths-webpack-plugin.git",
     "chai": "3.5.0",
     "clean-webpack-plugin": "0.1.9",
     "combine-loader": "0.1.0",
@@ -72,7 +73,6 @@
     "express": "4.13.4",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
-    "force-case-sensitivity-webpack-plugin": "0.1.1",
     "front-matter-loader": "0.1.2",
     "glob": "7.0.3",
     "html-loader": "0.4.3",
