code highlighting: style code blocks
- use styling from bootstrap
- avoid background coloring on scratch code
- add scratch colors
- do not wrap long code lines on screens

--- a/.bootstraprc
+++ b/.bootstraprc
@@ -61,7 +61,7 @@ styles:
   # Core CSS
   scaffolding: true
   type: true
-  code: false
+  code: true
   grid: true
   tables: false
   forms: true
