--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "15.1.0",
     "react-redux": "4.4.5",
     "react-router": "2.4.1",
+    "react-router-scroll": "0.2.0",
     "redux": "3.5.2",
     "reselect": "2.5.1"
   },
