Switch case-sensitive-paths-webpack-plugin back to original library, new version.

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "bootstrap-loader": "1.0.10",
     "bootstrap-sass": "3.3.6",
     "bundle-loader": "0.5.4",
-    "case-sensitive-paths-webpack-plugin": "NorwegianKiwi/case-sensitive-paths-webpack-plugin",
+    "case-sensitive-paths-webpack-plugin": "1.1.2",
     "chai": "3.5.0",
     "clean-webpack-plugin": "0.1.9",
     "combine-loader": "0.1.0",
