--- a/.bootstraprc
+++ b/.bootstraprc
@@ -72,7 +72,7 @@ styles:
   dropdowns: true
   button-groups: true
   input-groups: false
-  navs: false
+  navs: true
   navbar: true
   breadcrumbs: false
   pagination: false
