--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-router": "^2.4.1",
     "react-router-scroll": "^0.2.0",
     "redux": "^3.5.2",
-    "reselect": "^2.5.1"
+    "reselect": "^2.5.1",
+    "scratchblocks": "github:arve0/scratchblocks"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
