Fix previous commit by adding basename to history, so that site can be served from different folder than root.

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "dependencies": {
+    "history": "^2.1.2",
     "react": "^15.1.0",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^15.1.0",
