--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "eslint-plugin-react": "^5.2.2",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "favicons-webpack-plugin": "^0.0.7",
     "file-loader": "^0.8.5",
     "front-matter-loader": "^0.1.2",
     "glob": "^7.0.3",
