Switch npm install to yarn for travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_install:
 cache:
   directories:
   - $HOME/.yarn-cache
+install:
+  - yarn
 script:
   - yarn run eslint
   - yarn run stylelint
