--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,22 @@
 language: node_js
 node_js:
-  - "6.2.2"
+  - "6.9.1"
 before_install:
-  - git clone https://github.com/kodeklubben/oppgaver.git ../oppgaver
+  - git clone --depth=50 https://github.com/kodeklubben/oppgaver.git ../oppgaver
+  # Repo for newer Node.js versions
+  - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
+  # Repo for Yarn until Travis includes yarn
+  - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq yarn
+cache:
+  directories:
+  - $HOME/.yarn-cache
+install:
+  - yarn --no-emoji
 script:
-  - npm run eslint -s
-  - npm run stylelint -s
-  - npm run test -s
+  - yarn run eslint
+  - yarn run stylelint
+  - yarn run test
   - ./travis_build_prod.sh
