--- a/.bootstraprc
+++ b/.bootstraprc
@@ -31,7 +31,7 @@ extractStyles: false
 # Thus, derived Bootstrap variables can depend on values from here.
 # See the Bootstrap _variables.scss file for examples of derived Bootstrap variables.
 #
-# preBootstrapCustomizations: ./path/to/bootstrap/pre-customizations.scss
+preBootstrapCustomizations: ./src/styles/pre-customizations.scss
 
 
 # This gets loaded after bootstrap/variables is loaded
