--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A viewer to display codeclub lessons",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server -d --progress --inline --hot --history-api-fallback",
+    "start": "webpack-dev-server -d --progress --inline --hot --history-api-fallback --host 0.0.0.0",
     "buildjs": "webpack -d --progress",
     "buildjs:prod": "cross-env NODE_ENV=production webpack -p --progress",
     "buildstatic": "webpack --config=webpack.static.config.babel.js --progress",
