--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
+    "react-router-bootstrap": "^0.23.1",
     "react-router-scroll": "^0.2.0",
     "redux": "^3.5.2",
     "reselect": "^2.5.1",
