--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,28 +1,20 @@
 {
-  "extends": "stylelint-config-standard",
+  "extends": [
+    "stylelint-config-standard",
+    "stylelint-config-css-modules"
+  ],
   "rules": {
-    "selector-pseudo-class-no-unknown": [
-      true,
-      {
-        "ignorePseudoClasses": [
-          "global"
-        ]
-      }
-    ],
-    "at-rule-empty-line-before": [
-      "always",
-      {
-        "except": [
-          "blockless-group",
-          "first-nested"
-        ],
-        "ignore": [
-          "after-comment"
-        ],
-        "ignoreAtRules": [
-          "include"
-        ]
-      }
-    ]
+    "rule-empty-line-before": [ "always-multi-line", {
+      "except": ["first-nested"],
+      "ignore": ["after-comment", "inside-block"]
+    }],
+    "at-rule-no-unknown": [ true, {
+      "ignoreAtRules": [
+        "value",
+        "mixin",
+        "include"
+      ]
+    }],
+    "declaration-empty-line-before": [ "never" ]
   }
 }
