--- a/.stylelintrc
+++ b/.stylelintrc
@@ -15,6 +15,11 @@
         "include"
       ]
     }],
-    "declaration-empty-line-before": [ "never" ]
+    "declaration-empty-line-before": "never",
+    "at-rule-no-vendor-prefix": true,
+    "media-feature-name-no-vendor-prefix": true,
+    "property-no-vendor-prefix": true,
+    "selector-no-vendor-prefix": true,
+    "value-no-vendor-prefix": true
   }
 }
