--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "react-router-scroll": "^0.2.0",
     "redux": "^3.5.2",
     "reselect": "^2.5.1",
-    "scratchblocks": "github:arve0/scratchblocks"
+    "scratchblocks": "github:arve0/scratchblocks#68ebaf393c4be6193a339b9dd473ca01cfc7f7f1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
