--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-router": "^2.4.1",
     "react-router-bootstrap": "^0.23.1",
     "react-router-scroll": "^0.2.0",
+    "react-tooltip": "^3.2.6",
     "redux": "^3.5.2",
     "reselect": "^2.5.1",
     "scratchblocks": "github:arve0/scratchblocks#68ebaf393c4be6193a339b9dd473ca01cfc7f7f1"
