--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   },
   "dependencies": {
     "history": "^2.1.2",
+    "html2canvas": "^0.5.0-beta4",
+    "jspdf": "^1.3.2",
     "posthtml-parser": "^0.2.0",
     "posthtml-render": "^1.0.6",
     "react": "^15.1.0",
