--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jspdf": "^1.3.2",
     "posthtml-parser": "^0.2.0",
     "posthtml-render": "^1.0.6",
+    "rasterizehtml": "^1.2.4",
     "react": "^15.1.0",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.1.0",
