Issue 240: Fix stylelint

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -13,7 +13,8 @@
       "ignoreAtRules": [
         "value",
         "mixin",
-        "include"
+        "include",
+        "extend"
       ]
     }],
     "declaration-empty-line-before": "never",
