--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "dependencies": {
+    "canvas": "^1.6.5",
     "history": "^2.1.2",
     "html2canvas": "^0.5.0-beta4",
     "jspdf": "^1.3.2",
