--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   "dependencies": {
     "canvas": "^1.6.5",
     "history": "^2.1.2",
+    "html2canvas": "^0.5.0-beta4",
+    "jspdf": "^1.3.3",
     "markdown-pdf": "^7.0.0",
     "posthtml-parser": "^0.2.0",
     "posthtml-render": "^1.0.6",
