--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     ]
   },
   "dependencies": {
+    "highlight.js": "^9.11.0",
     "history": "^2.1.2",
-    "markdown-it-checkbox": "^1.1.0",
+    "markdown-it": "^8.3.1",
+    "markdown-it-task-checkbox": "^1.0.3",
     "posthtml-parser": "^0.2.0",
     "posthtml-render": "^1.0.6",
     "react": "^15.1.0",
@@ -92,7 +94,7 @@
     "markdown-it-attrs": "^0.5.1",
     "markdown-it-header-sections": "^0.2.2",
     "markdown-it-implicit-figures": "^0.3.0",
-    "markdown-it-loader": "^0.2.0",
+    "markdown-it-loader": "^0.6.0",
     "mocha": "^3.2.0",
     "node-sass": "^4.5.0",
     "postcss-loader": "^0.9.1",
