--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "yarn run buildjs && yarn run buildstatic",
     "build:prod": "yarn run buildjs:prod && yarn run buildstatic",
     "build:prod:travis": "cross-env NODE_ENV=production webpack -p && webpack --config=webpack.static.config.babel.js",
-    "serve": "ws -p 8080 -c -d ./dist -s index.html",
+    "serve": "ws",
     "servejs": "node ./server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
     "test:watch": "yarn run test -- --watch",
@@ -40,6 +40,11 @@
       "react",
       "stage-2"
     ]
+  },
+  "local-web-server": {
+    "port": 8080,
+    "directory": "./dist",
+    "compress": true
   },
   "dependencies": {
     "highlight.js": "^9.11.0",
