fix test for localstorage and travis

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:prod:travis": "cross-env NODE_ENV=production webpack -p && webpack --config=webpack.static.config.babel.js",
     "serve": "ws -p 8080 -c -d ./dist -s index.html",
     "servejs": "node ./server.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\" -r mock-local-storage",
     "test:watch": "yarn run test -- --watch",
     "eslint": "eslint src/ test/ --ext .js,.jsx",
     "stylelint": "stylelint 'src/**/*.scss'",
@@ -96,6 +96,7 @@
     "markdown-it-implicit-figures": "^0.3.0",
     "markdown-it-loader": "^0.6.0",
     "mocha": "^3.2.0",
+    "mock-local-storage": "^1.0.2",
     "node-sass": "^4.5.0",
     "postcss-loader": "^0.9.1",
     "raw-loader": "^0.5.1",
