--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "posthtml-render": "^1.0.6",
     "react": "^15.1.0",
     "react-bootstrap": "^0.30.6",
+    "react-document-title": "^2.0.3",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
