--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "serve": "ws",
     "servejs": "node ./server.js",
     "test": "mocha --compilers js:babel-core/register --require mock-local-storage --require ignore-styles --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
+    "test:links": "node test-links.js",
     "test:watch": "yarn run test -- --watch",
     "eslint": "eslint src/ test/ --ext .js,.jsx",
     "stylelint": "stylelint 'src/**/*.scss'",
@@ -102,6 +103,8 @@
     "mocha": "^3.2.0",
     "mock-local-storage": "^1.0.2",
     "node-sass": "^4.5.0",
+    "node-spider": "^1.4.1",
+    "node-static": "^0.7.9",
     "postcss-loader": "^0.9.1",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
