review test links #357
- add link tester to travis CI
- add link tester to `yarn run testall`
- fix code from comments in PR #357

TODO: Fix links. I need help with this, maybe fix in `src/route*.js`?

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:watch": "yarn run test -- --watch",
     "eslint": "eslint *.js src/ test/ --ext .js,.jsx",
     "stylelint": "stylelint 'src/**/*.scss'",
-    "testall": "yarn run eslint && yarn run stylelint && yarn run test"
+    "testall": "yarn run eslint && yarn run stylelint && yarn run test && yarn run build && yarn run test:links"
   },
   "repository": {
     "type": "git",
