--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   "dependencies": {
     "highlight.js": "^9.11.0",
     "history": "^2.1.2",
+    "html2canvas": "^0.5.0-beta4",
+    "jspdf": "^1.3.3",
     "markdown-it": "^8.3.1",
     "markdown-it-task-checkbox": "^1.0.3",
     "posthtml-parser": "^0.2.0",
