--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "file-loader": "^0.8.5",
     "front-matter-loader": "^0.1.2",
     "glob": "^7.0.3",
-    "html-loader": "^0.4.3",
+    "html-loader": "^0.5.0",
     "html-webpack-plugin": "^2.19.0",
     "ignore-styles": "^5.0.1",
     "isomorphic-style-loader": "^1.0.0",
@@ -100,6 +100,7 @@
     "markdown-it-header-sections": "^0.2.2",
     "markdown-it-implicit-figures": "^0.3.0",
     "markdown-it-loader": "^0.6.0",
+    "markdown-it-modify-token": "^1.0.2",
     "mocha": "^3.2.0",
     "mock-local-storage": "^1.0.2",
     "node-sass": "^4.5.0",
