--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "clean-webpack-plugin": "^0.1.9",
     "combine-loader": "^0.2.0",
     "compression": "^1.6.2",
+    "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "deep-freeze": "^0.0.1",
