--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "highlight.js": "^9.11.0",
     "history": "^2.1.2",
     "markdown-it": "^8.3.1",
