--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "highlight.js": "^9.11.0",
     "history": "^2.1.2",
     "markdown-it": "^8.3.1",
@@ -53,6 +54,7 @@
     "react-bootstrap": "^0.30.6",
     "react-document-title": "^2.0.3",
     "react-dom": "^15.1.0",
+    "react-overlays": "^0.8.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-bootstrap": "^0.23.1",
