--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
@@ -83,8 +84,8 @@
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "deep-freeze": "^0.0.1",
-    "eslint": "^3.15.0",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint": "^4.6.1",
+    "eslint-plugin-react": "^7.3.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "favicons-webpack-plugin": "^0.0.7",
@@ -106,6 +107,7 @@
     "markdown-it-task-checkbox": "^1.0.4",
     "mocha": "^3.2.0",
     "mock-local-storage": "^1.0.2",
+    "node-cleanup": "^2.1.2",
     "node-sass": "^4.5.0",
     "node-spider": "^1.4.1",
     "node-static": "^0.7.9",
@@ -124,6 +126,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.0",
+    "webpack-shell-plugin": "^0.5.0",
     "yaml-front-matter": "^3.4.0"
   }
 }
