--- a/package.json
+++ b/package.json
@@ -44,16 +44,17 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "create-react-class": "^15.6.2",
     "highlight.js": "^9.11.0",
     "history": "^2.1.2",
     "markdown-it": "^8.3.1",
     "posthtml-parser": "^0.2.0",
     "posthtml-render": "^1.0.6",
     "re-reselect": "^0.5.0",
-    "react": "^15.1.0",
+    "react": "^15.6.0",
     "react-bootstrap": "^0.30.6",
     "react-document-title": "^2.0.3",
-    "react-dom": "^15.1.0",
+    "react-dom": "^15.6.0",
     "react-overlays": "^0.8.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
