--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   },
   "extends": "eslint:recommended",
   "parserOptions": {
+    "ecmaVersion": 8,
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true,
       "jsx": true
