Add PDF button to lessons, and use a fake PDF unless build:prod to save time.

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "buildjs": "webpack -d --progress",
     "buildjs:prod": "cross-env NODE_ENV=production webpack -p --progress",
     "buildstatic": "webpack --config=webpack.static.config.babel.js --progress",
+    "buildstatic:prod": "cross-env BUILD_PDF=true webpack --config=webpack.static.config.babel.js --progress",
     "build": "yarn run buildjs && yarn run buildstatic",
     "build:prod": "yarn run buildjs:prod && yarn run buildstatic",
-    "build:prod:travis": "cross-env NODE_ENV=production webpack -p && webpack --config=webpack.static.config.babel.js",
+    "build:travis": "cross-env NODE_ENV=production webpack -p && webpack --config=webpack.static.config.babel.js",
     "serve": "ws",
     "servejs": "node ./server.js",
     "test": "mocha --compilers js:babel-core/register --require mock-local-storage --require ignore-styles --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
