--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
   "scripts": {
     "start": "webpack-dev-server -d --progress --inline --hot --history-api-fallback --host 0.0.0.0",
     "buildjs": "webpack -d --progress",
-    "buildjs:prod": "cross-env NODE_ENV=production webpack -p --progress",
+    "buildjs:prod": "cross-env NODE_ENV=production BUILD_PDF=true webpack -p --progress",
     "buildstatic": "webpack --config=webpack.static.config.babel.js --progress",
-    "build": "yarn run buildjs && yarn run buildstatic",
-    "build:prod": "yarn run buildjs:prod && yarn run buildstatic",
-    "build:prod:travis": "cross-env NODE_ENV=production webpack -p && webpack --config=webpack.static.config.babel.js",
+    "buildstatic:prod": "cross-env BUILD_PDF=true webpack --config=webpack.static.config.babel.js --progress",
+    "build": "yarn buildjs && yarn buildstatic",
+    "build:prod": "yarn buildjs:prod && yarn buildstatic:prod",
+    "build:travis": "cross-env NODE_ENV=production webpack -p && webpack --config=webpack.static.config.babel.js",
     "serve": "ws",
     "servejs": "node ./server.js",
     "test": "mocha --compilers js:babel-core/register --require mock-local-storage --require ignore-styles --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
     "test:links": "node test-links.js",
-    "test:watch": "yarn run test -- --watch",
+    "test:watch": "yarn test -- --watch",
     "eslint": "eslint *.js src/ test/ --ext .js,.jsx",
     "stylelint": "stylelint \"src/**/*.scss\"",
-    "testall": "yarn run eslint && yarn run stylelint && yarn run test"
+    "testall": "yarn eslint && yarn stylelint && yarn test"
   },
   "repository": {
     "type": "git",
@@ -66,6 +67,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
@@ -83,13 +85,14 @@
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "deep-freeze": "^0.0.1",
-    "eslint": "^3.15.0",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint": "^4.6.1",
+    "eslint-plugin-react": "^7.3.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "favicons-webpack-plugin": "^0.0.7",
     "file-loader": "^0.8.5",
     "front-matter-loader": "^0.1.2",
+    "fs-extra": "4.0.2",
     "glob": "^7.0.3",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.19.0",
@@ -106,10 +109,12 @@
     "markdown-it-task-checkbox": "^1.0.4",
     "mocha": "^3.2.0",
     "mock-local-storage": "^1.0.2",
+    "node-cleanup": "^2.1.2",
     "node-sass": "^4.5.0",
     "node-spider": "^1.4.1",
     "node-static": "^0.7.9",
     "postcss-loader": "^0.9.1",
+    "puppeteer": "^0.10.2",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
     "resolve-url-loader": "^1.4.3",
@@ -123,6 +128,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.0",
+    "webpack-shell-plugin": "^0.5.0",
     "yaml-front-matter": "^3.4.0"
   }
 }
