--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "markdown-it-task-checkbox": "^1.0.4",
     "mocha": "^3.2.0",
     "mock-local-storage": "^1.0.2",
+    "mock-require": "^2.0.2",
     "node-cleanup": "^2.1.2",
     "node-sass": "^4.5.0",
     "node-spider": "^1.4.1",
