--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "markdown-it": "^8.3.1",
     "posthtml-parser": "^0.2.0",
     "posthtml-render": "^1.0.6",
+    "prop-types": "^15.6.0",
     "re-reselect": "^0.5.0",
-    "react": "^15.1.0",
+    "react": "15.3.0",
     "react-bootstrap": "^0.30.6",
     "react-document-title": "^2.0.3",
-    "react-dom": "^15.1.0",
+    "react-dom": "15.3.0",
     "react-overlays": "^0.8.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
