--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
     "stylelint-config-css-modules": "^0.1.0",
     "stylelint-config-standard": "^16.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
+    "webpack": "3.10.0",
     "webpack-dev-server": "^1.14.0",
     "webpack-shell-plugin": "^0.5.0",
     "yaml-front-matter": "^3.4.0"
