--- a/package.json
+++ b/package.json
@@ -64,17 +64,17 @@
     "react-scroll-to-component": "^1.0.1",
     "redux": "^3.5.2",
     "reselect": "^2.5.1",
-    "scratchblocks": "github:arve0/scratchblocks#68ebaf393c4be6193a339b9dd473ca01cfc7f7f1"
+    "scratchblocks": "^3.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.9.1",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
-    "bootstrap-loader": "^1.0.10",
+    "bootstrap-loader": "^2.2.0",
     "bootstrap-sass": "^3.3.6",
     "bundle-loader": "^0.5.4",
     "case-sensitive-paths-webpack-plugin": "^1.1.2",
@@ -89,14 +89,14 @@
     "eslint": "^4.6.1",
     "eslint-plugin-react": "^7.3.0",
     "express": "^4.13.4",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "favicons-webpack-plugin": "^0.0.7",
     "file-loader": "^0.8.5",
     "front-matter-loader": "^0.1.2",
     "fs-extra": "4.0.2",
     "glob": "^7.0.3",
     "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.19.0",
+    "html-webpack-plugin": "^2.30.1",
     "ignore-styles": "^5.0.1",
     "isomorphic-style-loader": "^1.0.0",
     "jsdom": "^9.2.1",
@@ -120,7 +120,7 @@
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
     "resolve-url-loader": "^1.4.3",
-    "sass-loader": "^4.1.1",
+    "sass-loader": "^6.0.6",
     "sitemap-webpack-plugin": "^0.3.0",
     "static-site-generator-webpack-plugin": "^3.1.0",
     "style-loader": "^0.13.1",
@@ -129,7 +129,7 @@
     "stylelint-config-standard": "^16.0.0",
     "url-loader": "^0.5.7",
     "webpack": "3.10.0",
-    "webpack-dev-server": "^1.14.0",
+    "webpack-dev-server": "^2.9.7",
     "webpack-shell-plugin": "^0.5.0",
     "yaml-front-matter": "^3.4.0"
   }
