--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A viewer to display codeclub lessons",
   "main": "index.js",
   "scripts": {
+    "start:new": "webpack-dev-server --config=webpack.new.config.babel.js -d --progress --inline --hot --history-api-fallback --host 0.0.0.0",
+    "build:new": "webpack --config=webpack.new.config.babel.js -d --progress",
     "start": "webpack-dev-server -d --progress --inline --hot --history-api-fallback --host 0.0.0.0",
     "buildjs": "webpack -d --progress",
     "buildjs:prod": "cross-env NODE_ENV=production BUILD_PDF=true webpack -p --progress",
