--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start:new": "webpack-dev-server --config=webpack.new.config.babel.js -d --progress --inline --hot --history-api-fallback --host 0.0.0.0",
-    "build:new": "webpack --config=webpack.new.config.babel.js -d --progress",
+    "build-d:new": "webpack --config=webpack.new.config.babel.js -d --progress --env.verbose",
+    "build:new": "webpack --config=webpack.new.config.babel.js --progress",
+    "build-p:new": "webpack --config=webpack.new.config.babel.js --progress",
+    "build-analyse:new": "webpack --config=webpack.new.config.babel.js --profile --json > stats.json",
     "start": "webpack-dev-server -d --progress --inline --hot --history-api-fallback --host 0.0.0.0",
     "buildjs": "webpack -d --progress",
     "buildjs:prod": "cross-env NODE_ENV=production BUILD_PDF=true webpack -p --progress",
