Rename scripts in package.json

--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "description": "A viewer to display codeclub lessons",
   "main": "index.js",
   "scripts": {
-    "start:new": "webpack-dev-server --config=webpack.new.config.babel.js -d --progress --inline --hot --history-api-fallback --host 0.0.0.0",
-    "build-d:new": "webpack --config=webpack.new.config.babel.js -d --progress --env.verbose",
-    "build:new": "webpack --config=webpack.new.config.babel.js --progress",
-    "build-p:new": "webpack --config=webpack.new.config.babel.js --progress",
-    "build-analyse:new": "webpack --config=webpack.new.config.babel.js --progress --profile --json > stats.json",
-    "start": "webpack-dev-server -d --progress --inline --hot --history-api-fallback --host 0.0.0.0",
-    "buildjs": "webpack -d --progress",
-    "buildjs:prod": "cross-env NODE_ENV=production BUILD_PDF=true webpack -p --progress",
-    "buildstatic": "webpack --config=webpack.static.config.babel.js --progress",
-    "buildstatic:prod": "cross-env BUILD_PDF=true webpack --config=webpack.static.config.babel.js --progress",
-    "build": "yarn buildjs && yarn buildstatic",
-    "build:prod": "yarn buildjs:prod && yarn buildstatic:prod",
-    "build:travis": "cross-env NODE_ENV=production webpack -p && webpack --config=webpack.static.config.babel.js",
+    "start": "webpack-dev-server --config=webpack.new.config.babel.js -d --progress --inline --hot --history-api-fallback --host 0.0.0.0",
+    "build:debug": "webpack --config=webpack.new.config.babel.js -d --progress --env.verbose",
+    "build": "webpack --config=webpack.new.config.babel.js --progress",
+    "build:prod": "webpack --config=webpack.new.config.babel.js --progress",
+    "build:analyse:": "webpack --config=webpack.new.config.babel.js --progress --profile --json > stats.json",
+    "buildjs_old": "webpack -d --progress",
+    "buildjs_old:prod": "cross-env NODE_ENV=production BUILD_PDF=true webpack -p --progress",
+    "buildstatic_old": "webpack --config=webpack.static.config.babel.js --progress",
+    "buildstatic_old:prod": "cross-env BUILD_PDF=true webpack --config=webpack.static.config.babel.js --progress",
+    "build_old": "yarn buildjs_old && yarn buildstatic_old",
+    "build_old:prod": "yarn buildjs_old:prod && yarn buildstatic_old:prod",
+    "build_old:travis": "cross-env NODE_ENV=production webpack -p && webpack --config=webpack.static.config.babel.js",
     "serve": "ws",
     "servejs": "node ./server.js",
     "test": "mocha --compilers js:babel-core/register --require mock-local-storage --require ignore-styles --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
