--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "deep-freeze": "^0.0.1",
+    "ejs-compiled-loader": "^1.1.0",
     "eslint": "^4.6.1",
     "eslint-plugin-react": "^7.3.0",
     "express": "^4.13.4",
