Issue 197++: Upgrade webpack (#454)
* Add check for yarn version in createLessonPdfs, and require at least version 1.3.2

* Better error handling for createLessonPdfs.

* Process multiple PDFs simultaneously (currently 10 at a time).

* Upgrade node to 9.3.0. Also upgrade node-sass.

* Upgrade webpack to 3.10.0

* Upgrade other outdated packages that gave peer dependency warnings

* WIP: Changes needed during upgrade

* Add webpack.new.config.babel.js

* WIP

* WIP

* WIP

* WIP

* WIP added env and script for analyse

* Removed code splitting for NotFoundPage, PlaylistPage and FrontPage

* Remove all use of getComponent in routes.

* Use only routes.js, delete routeObject.js and routes-static.js

* Move contexts to resources.js

* Remove contexts from state.

* Remove lessons from store

* Rename scripts in package.json

* WIP

* Both yarn build and yarn start now works, including static html generation, but without pdfs.

Generate favicons manually, stop using plugin.
Some known bugs, including breadcrumb in lesson.

* Fix bug with missing lesson in breadcrumb and title.

* Some cleanup

* Tilbake til arve sin versjon av scratchblocks

* Clean up webpack code

* Disable uglify warnings

* Update node to version 9.8.0, and update README

--- a/package.json
+++ b/package.json
@@ -5,15 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server -d --progress --inline --hot --history-api-fallback --host 0.0.0.0",
-    "buildjs": "webpack -d --progress",
-    "buildjs:prod": "cross-env NODE_ENV=production BUILD_PDF=true webpack -p --progress",
-    "buildstatic": "webpack --config=webpack.static.config.babel.js --progress",
-    "buildstatic:prod": "cross-env BUILD_PDF=true webpack --config=webpack.static.config.babel.js --progress",
-    "build": "yarn buildjs && yarn buildstatic",
-    "build:prod": "yarn buildjs:prod && yarn buildstatic:prod",
-    "build:travis": "cross-env NODE_ENV=production webpack -p && webpack --config=webpack.static.config.babel.js",
+    "build:debug": "webpack -d --progress --env.verbose",
+    "build": "webpack --progress",
+    "build:prod": "webpack -p --progress --env.NODE_ENV=production --env.BUILD_PDF",
+    "build:analyse:": "webpack --progress --profile --json > stats.json",
+    "build:travis": "webpack -p --env.NODE_ENV=production",
     "serve": "ws",
-    "servejs": "node ./server.js",
     "test": "mocha --compilers js:babel-core/register --require mock-local-storage --require ignore-styles --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
     "test:links": "node test-links.js",
     "test:watch": "yarn test -- --watch",
@@ -70,11 +67,11 @@
     "autoprefixer": "^6.7.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.9.1",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
-    "bootstrap-loader": "^1.0.10",
+    "bootstrap-loader": "^2.2.0",
     "bootstrap-sass": "^3.3.6",
     "bundle-loader": "^0.5.4",
     "case-sensitive-paths-webpack-plugin": "^1.1.2",
@@ -86,17 +83,17 @@
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "deep-freeze": "^0.0.1",
+    "ejs-compiled-loader": "^1.1.0",
     "eslint": "^4.6.1",
     "eslint-plugin-react": "^7.3.0",
     "express": "^4.13.4",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "favicons-webpack-plugin": "^0.0.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.8.5",
     "front-matter-loader": "^0.1.2",
     "fs-extra": "4.0.2",
     "glob": "^7.0.3",
     "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.19.0",
+    "html-webpack-plugin": "^2.30.1",
     "ignore-styles": "^5.0.1",
     "isomorphic-style-loader": "^1.0.0",
     "jsdom": "^9.2.1",
@@ -115,21 +112,21 @@
     "node-sass": "4.7.2",
     "node-spider": "^1.4.1",
     "node-static": "^0.7.9",
-    "postcss-loader": "^0.9.1",
+    "postcss-loader": "^2.0.9",
     "puppeteer": "^0.10.2",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
     "resolve-url-loader": "^1.4.3",
-    "sass-loader": "^4.1.1",
+    "sass-loader": "^6.0.6",
     "sitemap-webpack-plugin": "^0.3.0",
-    "static-site-generator-webpack-plugin": "^3.1.0",
+    "static-site-generator-webpack-plugin": "^3.4.1",
     "style-loader": "^0.13.1",
     "stylelint": "^7.8.0",
     "stylelint-config-css-modules": "^0.1.0",
     "stylelint-config-standard": "^16.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.0",
+    "webpack": "3.10.0",
+    "webpack-dev-server": "^2.11.2",
     "webpack-shell-plugin": "^0.5.0",
     "yaml-front-matter": "^3.4.0"
   }
