--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "highlight.js": "^9.11.0",
     "history": "^2.1.2",
     "markdown-it": "^8.3.1",
+    "offline-plugin": "^4.9.0",
     "posthtml-parser": "^0.2.0",
     "posthtml-render": "^1.0.6",
     "prop-types": "^15.6.0",
