--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "mocha": true
   },
   "extends": "eslint:recommended",
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 8,
     "ecmaFeatures": {
