--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-scroll-to-component": "^1.0.1",
     "redux": "^3.5.2",
     "reselect": "^2.5.1",
-    "scratchblocks": "github:arve0/scratchblocks#68ebaf393c4be6193a339b9dd473ca01cfc7f7f1"
+    "scratchblocks": "github:arve0/scratchblocks#68ebaf393c4be6193a339b9dd473ca01cfc7f7f1",
+    "serviceworker-webpack-plugin": "^0.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
