--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "url-loader": "^0.5.7",
     "webpack": "3.10.0",
     "webpack-dev-server": "^2.11.2",
+    "webpack-pwa-manifest": "^3.6.2",
     "webpack-shell-plugin": "^0.5.0",
     "yaml-front-matter": "^3.4.0"
   }
